<resources>
    <string name="app_name">Marketplace</string>
    <string name="home">Home</string>
    <string name="mensagens">Mensagens</string>
    <string name="novo">Novo</string>
    <string name="perfil">Perfil</string>
    <string name="pesquisar">Pesquisar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>