<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_tab"
        android:icon="@drawable/ic_baseline_home_24"
        android:iconTint="@color/icon_color_selector_bottom_tab"
        android:title="@string/home" />
    <item
        android:id="@+id/chat_tab"
        android:iconTint="@color/icon_color_selector_bottom_tab"
        android:icon="@drawable/ic_baseline_chat_bubble_outline_24"
        android:title="@string/mensagens" />
    <item
        android:id="@+id/add_tab"
        android:iconTint="@color/icon_color_selector_bottom_tab"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/novo" />
    <item
        android:id="@+id/person_tab"
        android:iconTint="@color/icon_color_selector_bottom_tab"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/perfil" />
    <item
        android:id="@+id/search_tab"
        android:iconTint="@color/icon_color_selector_bottom_tab"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/pesquisar" />
</menu>